--- a/main.css
+++ b/main.css
@@ -58,4 +58,74 @@ a:visited {
 .topnav-right {
   float: right; }
 
+.banner {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center; }
+
+nav {
+  padding: 10px; }
+  @media (min-width: 600px) {
+    nav {
+      padding: 20px; } }
+
+nav.flexbox {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center; }
+  @media (min-width: 600px) {
+    nav.flexbox {
+      justify-content: space-between; } }
+  nav.flexbox ul {
+    list-style-type: none;
+    display: flex;
+    align-items: center; }
+  nav.flexbox ul li {
+    flex: 0 0 70px;
+    margin-right: 10px;
+    text-align: center; }
+    @media (min-width: 600px) {
+      nav.flexbox ul li {
+        flex: 0 0 auto;
+        margin-right: 20px; } }
+    nav.flexbox ul li:last-child {
+      margin-right: 0px; }
+  nav.flexbox > a {
+    margin-bottom: 10px; }
+    @media (min-width: 600px) {
+      nav.flexbox > a {
+        margin-bottom: 0px; } }
+
+ul.fullwidth {
+  flex: 1 0 100%;
+  justify-content: center; }
+  @media (min-width: 600px) {
+    ul.fullwidth {
+      flex: 0 1 auto; } }
+
+nav.flexbox a {
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: #ddd; }
+  @media (min-width: 600px) {
+    nav.flexbox a {
+      font-size: 20px; } }
+
+nav.flexbox a::before {
+  content: "";
+  position: absolute;
+  width: 0px;
+  height: 3px;
+  right: 0px;
+  bottom: -3px;
+  left: 0px;
+  background-color: #505050; }
+
+nav.flexbox a:hover::before {
+  width: 100%; }
+
 /*# sourceMappingURL=main.css.map */
