--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,6 @@
 $background: #111;
+$mywhite: #ddd;
+$mygray: #505050;
 
 body {
   padding: 25px;
@@ -66,4 +68,99 @@ a:visited {
 
 .topnav-right {
   float: right;
+}
+
+// Banner
+.banner{
+    width: 100%;
+    height: 100vh;
+    // background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url("images/collatz_sea_weed_bw.webp");
+    // background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url("images/collatz_sea_weed_color1.webp");
+    // Nahh
+    // background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url("images/collatz_sea_weed_color2.webp");
+    // Purple
+    // background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url("images/collatz_sea_weed_color3.webp");
+    // background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url("images/collatz_sea_weed_color4.webp");
+    // Green
+    // background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url("images/collatz_sea_weed_color5.webp");
+    // Nahh
+    // background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url("images/collatz_sea_weed_color6.webp");
+    // background-image: linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url("images/collatz_sea_weed_color7.webp");
+    background-size: cover;
+    background-position: center;
+}
+
+// navbar
+nav {
+    padding: 10px;
+    @media (min-width: 600px){
+        padding: 20px;
+    }
+}
+nav.flexbox {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    // Only space between if the width is large enough
+    @media (min-width: 600px){
+        justify-content: space-between;
+    }
+    ul {
+        list-style-type: none;
+        display: flex;
+        align-items: center;
+    }
+    ul li {
+        flex: 0 0 70px;
+        margin-right: 10px;
+        text-align: center;
+        @media (min-width: 600px){
+            flex: 0 0 auto;
+            margin-right: 20px;
+        }
+        &:last-child {
+            margin-right: 0px;
+        }
+    }
+    > a {
+        margin-bottom: 10px;
+        @media (min-width: 600px){
+            margin-bottom: 0px;
+        }
+    }
+}
+ul.fullwidth {
+    flex: 1 0 100%;
+    justify-content: center;
+    @media (min-width: 600px){
+        flex: 0 1 auto;
+    }
+}
+nav.flexbox a {
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 15px;
+    @media (min-width: 600px){
+        font-size: 20px;
+    }
+    color: $mywhite;
+}
+nav.flexbox a::before {
+    content: "";
+    position: absolute;
+    width: 0px;
+    height: 3px;
+    right: 0px;
+    bottom: -3px;
+    left: 0px;
+    background-color: $mygray;
+}
+nav.flexbox a:hover {
+    // color: $linkPink;
+    &::before {
+        width:100%;
+        // background: linear-gradient(to right, $linkPink 40%, $linkPurple 75%);
+    }
 }
